fix: lazy layout init due to content-visibility on body

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -143,7 +143,6 @@
     @apply bg-background font-sans text-foreground antialiased;
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
-    content-visibility: auto;
   }
 
   button {
